example/SyntaxError/invalid_rule_name.pione
Rule "aaa"
  input '*.a'
  output '*.b'
Action
cat {$I[1]} > {$O[1]}
End
